--- a/_posts/2025-04-25-second.md
+++ b/_posts/2025-04-25-second.md
@@ -18,5 +18,4 @@
 <br>
 
 ## 🙏 마무리
-> **공부한 것을 제대로 이해하고 습득하기 위해 쓰는 글로써
-글을 쓰면서 부족한 점을 보완하여 점차 발전하는 것이 목표입니다.**
+> **io를 잘 꾸며서 보기 쉽고 멋지게 만들어 보겠습니다.**
